// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationCard Component > matches snapshot for read notification 1`] = `
<div
  class="py-2 sm:py-3 first:pt-0 transition-all duration-200 opacity-75"
>
  <div
    class="flex items-start"
  >
    <div
      class="lg:w-10 lg:h-10 md:w-8 md:h-8 w-6 h-6 rounded-lg flex items-center justify-center mr-3"
      style="background-color: rgb(100, 164, 244);"
    >
      <img
        alt="info notification"
        class="lg:w-5 lg:h-5 md:w-4 md:h-4 w-3 h-3"
        src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20width='20'%20height='20'%20viewBox='0%200%2020%2020'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M16.6667%201.66667H3.33333C2.41286%201.66667%201.66667%202.41286%201.66667%203.33333V13.3333C1.66667%2014.2538%202.41286%2015%203.33333%2015H5.83333V18.3333L10.8333%2015H16.6667C17.5871%2015%2018.3333%2014.2538%2018.3333%2013.3333V3.33333C18.3333%202.41286%2017.5871%201.66667%2016.6667%201.66667Z'%20fill='white'%20stroke='%2364A4F4'%20strokeWidth='2'%20strokeLinecap='round'%20strokeLinejoin='round'/%3e%3c/svg%3e"
      />
    </div>
    <div
      class="flex-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <h3
          class="lg:text-sm text-[12px] font-medium leading-5 text-gray-600"
        >
          Test notification
        </h3>
      </div>
      <p
        class="text-xs sm:text-sm text-gray-500 mt-0.5"
      >
        2 minutes ago
      </p>
    </div>
    <div
      class="flex items-center gap-1"
    >
      <button
        class="p-1 sm:p-2 text-gray-400 hover:text-blue-600 rounded-full transition-colors"
        title="Mark as unread"
      >
        <svg
          class="w-3 h-3 sm:w-4 sm:h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        class="p-1 sm:p-2 text-gray-400 hover:text-red-500 rounded-full transition-colors"
        title="Delete notification"
      >
        <svg
          class="w-3 h-3 sm:w-4 sm:h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard Component > matches snapshot for unread notification 1`] = `
<div
  class="py-2 sm:py-3 first:pt-0 transition-all duration-200 opacity-100"
>
  <div
    class="flex items-start"
  >
    <div
      class="lg:w-10 lg:h-10 md:w-8 md:h-8 w-6 h-6 rounded-lg flex items-center justify-center mr-3"
      style="background-color: rgb(100, 164, 244);"
    >
      <img
        alt="info notification"
        class="lg:w-5 lg:h-5 md:w-4 md:h-4 w-3 h-3"
        src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='UTF-8'?%3e%3csvg%20width='20'%20height='20'%20viewBox='0%200%2020%2020'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M16.6667%201.66667H3.33333C2.41286%201.66667%201.66667%202.41286%201.66667%203.33333V13.3333C1.66667%2014.2538%202.41286%2015%203.33333%2015H5.83333V18.3333L10.8333%2015H16.6667C17.5871%2015%2018.3333%2014.2538%2018.3333%2013.3333V3.33333C18.3333%202.41286%2017.5871%201.66667%2016.6667%201.66667Z'%20fill='white'%20stroke='%2364A4F4'%20strokeWidth='2'%20strokeLinecap='round'%20strokeLinejoin='round'/%3e%3c/svg%3e"
      />
    </div>
    <div
      class="flex-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <h3
          class="lg:text-sm text-[12px] font-medium leading-5 text-gray-900"
        >
          Test notification
        </h3>
        <div
          class="w-2 h-2 bg-blue-500 rounded-full flex-shrink-0"
          data-testid="unread-indicator"
        />
      </div>
      <p
        class="text-xs sm:text-sm text-gray-500 mt-0.5"
      >
        2 minutes ago
      </p>
    </div>
    <div
      class="flex items-center gap-1"
    >
      <button
        class="p-1 sm:p-2 text-gray-400 hover:text-blue-600 rounded-full transition-colors"
        title="Mark as read"
      >
        <svg
          class="w-3 h-3 sm:w-4 sm:h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.878 9.878L3 3m6.878 6.878L21 21"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        class="p-1 sm:p-2 text-gray-400 hover:text-red-500 rounded-full transition-colors"
        title="Delete notification"
      >
        <svg
          class="w-3 h-3 sm:w-4 sm:h-4"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
